# Leges

./: .gitignore  ARCHITECTURE.md  DESIGN.md  README.en.md  README.md  README.zh.md  build_vector_store.py  embed_deepseek.py  fetch_ca_bills.py  fetch_hk_bills.py  fetch_mo_fast.py  fetch_mo_laws.py  pyproject.toml  requirements.txt  search_tool.py  vercel.json  verify_hk_data.py
data/: bill_metadata.json
engine/: config.py
web/: __init__.py  routes.py
web/static/: index.html
