[project]
name = "leges"
version = "2.0.0"
description = "Multi-jurisdictional legal proposal AI platform — DGX Spark Hackathon 2026"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.0",
    "anthropic>=0.30",
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
]

[tool.setuptools.packages.find]
include = ["engine*", "server*", "web*"]
